Fix live data glossary z-index

--- a/src/scss/live-data.scss
+++ b/src/scss/live-data.scss
@@ -126,7 +126,7 @@ body.live-data-page {
     }
 
     .slide-up-modal {
-      z-index: 3;
+      z-index: 500;
     }
 
     #projectLog {
